# YourTJ-Platform

./: .gitignore  AGENTS.md  README.md  design-qa.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  rustfmt.toml
backend/crates/activity/: Cargo.toml
backend/crates/activity/src/: check_ins.rs  contributions.rs  data_export.rs  dto.rs  handlers.rs  lib.rs  models.rs  repo.rs  score_projection.rs  trust.rs
backend/crates/activity/tests/: check_in_tests.rs  contribution_projection.rs  data_lifecycle_tests.rs  policy_projection_tests.rs  trust_level_tests.rs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: account_data.rs  account_eligibility.rs  admin.rs  appeals.rs  bootstrap.rs  main.rs  notification_worker.rs  onebox.rs  platform.rs  tip_targets.rs  wallet_keys.rs
backend/crates/courses/: Cargo.toml
backend/crates/courses/src/: admin_handlers.rs  admin_repo.rs  dto.rs  error.rs  handlers.rs  lib.rs  meili.rs  models.rs  pinyin.rs  public_search.rs  repo.rs  selection_admin.rs  selection_handlers.rs  selection_repo.rs  sync.rs
backend/crates/courses/tests/: courses_tests.rs  migration_0069_upgrade.rs  migration_0071_upgrade.rs  search_projection_tests.rs  selection_tests.rs
backend/crates/credit/: Cargo.toml
backend/crates/credit/src/: account_eligibility.rs  auth.rs  data_export.rs  dto.rs  error.rs  handlers.rs  ledger.rs  lib.rs  models.rs  reconciliation.rs  repo.rs  signing.rs  tip_targets.rs  wallet_keys.rs
backend/crates/credit/tests/: compliance_tests.rs  data_lifecycle_tests.rs  escrow_tests.rs  ledger_tests.rs  reconciliation_tests.rs  signing_intent_outcome_tests.rs  tip_tests.rs  wallet_tests.rs
backend/crates/e2e/: Cargo.toml
backend/crates/e2e/src/: main.rs  s2_identity.rs
backend/crates/forum/: Cargo.toml
backend/crates/forum/src/: appeals.rs  author_projection.rs  badges.rs  cache.rs  content_permissions.rs  content_policy.rs  data_export.rs  digest.rs  discovery.rs  dto.rs  error.rs  handlers.rs  lib.rs  meili.rs  mentions.rs  models.rs  notification_delivery.rs  notification_hooks.rs  notifications.rs  repo.rs  sanctions.rs  sse.rs  tip_targets.rs  trust_levels.rs  user_discovery.rs  watched_words.rs
backend/crates/forum/tests/: activity_projection_integrity_tests.rs  admin_board_tests.rs  comment_tests.rs  dm_tests.rs  draft_tests.rs  flag_tests.rs  following_feed_tests.rs  forum_media_attachment_tests.rs  forum_parity_tests.rs  meili_privacy_tests.rs  notification_tests.rs  public_profile_tests.rs  revision_access_tests.rs  social_relationship_tests.rs  thread_tests.rs  trust_level_tests.rs  vote_tests.rs
backend/crates/governance/: Cargo.toml
backend/crates/governance/src/: appeals.rs  data_export.rs  lib.rs  notices.rs
backend/crates/identity/: Cargo.toml
backend/crates/identity/src/: auth.rs  auth_middleware.rs  credential_state.rs  data_export.rs  dto.rs  email_code.rs  email_delivery.rs  email_templates.rs  error.rs  handlers.rs  ledger.rs  lib.rs  lifecycle.rs  models.rs  notification_hooks.rs  notifications.rs  onboarding.rs  password.rs  profiles.rs  public_accounts.rs  public_search.rs  rate_limit_subject.rs  repo.rs  sanctions.rs  security_events.rs  wallet_keys.rs
backend/crates/identity/tests/: account_lifecycle.rs  admin_governance.rs  appeal_auth.rs  auth_flow.rs  auth_hardening.rs  credential_delivery.rs  migration_0058_upgrade.rs  migration_0067_upgrade.rs  migration_0070_upgrade.rs  profile_privacy.rs  profile_wallet.rs  public_domain_api.rs  recent_auth.rs  wallet_claim.rs
backend/crates/media/: Cargo.toml
backend/crates/media/src/: approval.rs  attachments.rs  bindings.rs  cdn.rs  data_export.rs  deletion.rs  delivery.rs  dto.rs  error.rs  gc.rs  handlers.rs  image_header.rs  issuance.rs  lib.rs  locking.rs  models.rs  moderation.rs  oss.rs  preview.rs  processing.rs  quarantine.rs  reconciliation.rs  repo.rs  retention.rs
backend/crates/media/tests/: delivery_pipeline.rs  migration_0057_upgrade.rs  retention_gc.rs  upload_quarantine.rs
backend/crates/platform/: Cargo.toml
backend/crates/platform/src/: achievements.rs  announcements.rs  auth.rs  data_export.rs  lib.rs  outbox.rs  promotions.rs  settings.rs  validation.rs  verifications.rs
backend/crates/platform/tests/: achievement_operations.rs  platform_operations.rs  verification_credentials.rs
backend/crates/reviews/: Cargo.toml
backend/crates/reviews/src/: admin_handlers.rs  appeals.rs  data_export.rs  dto.rs  error.rs  handlers.rs  lib.rs  models.rs  repo.rs  search.rs  tip_targets.rs
backend/crates/reviews/tests/: admin_integrity.rs  review_crud.rs  review_likes.rs  review_reports.rs  review_stats.rs
backend/crates/search/: Cargo.toml
backend/crates/shared/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_escrow_selection.sql  0003_platform.sql  0004_review_remediation.sql  0005_forum_parity.sql  0006_forum_f2_f3.sql  0007_badges_feature.sql  0008_badge_mint_bridge.sql  0009_selection_raw_pk.sql  0010_selection_raw_normalized.sql  0011_password_auth.sql  0012_natural_key_upsert.sql  0013_teacher_names.sql  0014_credit_signing_intents.sql  0015_media_upload_intents.sql  0016_email_encryption.sql  0017_credit_prepared_ledger.sql  0018_email_encrypted_storage.sql  0019_legacy_review_interactions.sql  0020_activity.sql  0021_dm_moderation.sql  0022_governance.sql  0023_review_moderation_decisions.sql  0024_invitation_expiry.sql  0025_moderation_state.sql  0026_forum_flag_attempts.sql  0027_activity_backfill.sql  0028_review_course_restrict.sql  0029_review_report_open_uniqueness.sql  0030_review_create_idempotency.sql  0031_forum_board_thread_count_reconcile.sql  0032_credit_integrity_constraints.sql  0033_email_code_purpose_and_audit.sql  0033_identity_auth_hardening.sql  0034_session_family_and_audit.sql  0034_social_identity_privacy.sql  0035_platform_announcements_promotions.sql  0036_dm_participant_lifecycle.sql  0037_verification_credentials.sql  0038_credit_reconciliation.sql  (+36 more)
backend/ops/: README.md  check_media_retention_references.sql  materialize_courses.sql  materialize_selection.sql
(+571 files in other folders)
