[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
rust-version = "1.80"
repository = "https://github.com/YourTongji/YourTJ-Platform"

# Centralised dependency versions. A workspace dependency is only compiled when a
# member crate references it via `<name>.workspace = true`, so declaring future
# deps here is free until a crate actually uses them.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
# Enabled per-crate when the DB layer lands. Uses runtime queries (no compile-time
# DATABASE_URL needed) so offline builds stay green.
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
ring = "0.17"
redis = { version = "0.28", features = ["aio", "tokio-comp"] }
deadpool-redis = "0.19"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
jsonwebtoken = "9"
async-trait = "0.1"
meilisearch-sdk = "0.27"
pinyin = { version = "0.11", features = ["plain"] }

# Internal crates (domain boundaries).
shared = { path = "crates/shared" }
identity = { path = "crates/identity" }
courses = { path = "crates/courses" }
reviews = { path = "crates/reviews" }
credit = { path = "crates/credit" }
forum = { path = "crates/forum" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
