[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
rust-version = "1.80"
repository = "https://github.com/YourTongji/YourTJ-Platform"
publish = false

# Centralised dependency versions. A workspace dependency is only compiled when a
# member crate references it via `<name>.workspace = true`, so declaring future
# deps here is free until a crate actually uses them.
[workspace.dependencies]
aho-corasick = "1"
anyhow = "1"
arc-swap = "1"
argon2 = { version = "0.5", features = ["password-hash"] }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"] }
meilisearch-sdk = "0.27"
once_cell = "1"
openssl = "0.10"
pinyin = { version = "0.11", features = ["plain"] }
redis = { version = "0.28", features = ["aio", "tokio-comp"] }
deadpool-redis = "0.19"
regex = "1"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha1 = "0.10"
# Enabled per-crate when the DB layer lands. Uses runtime queries (no compile-time
# DATABASE_URL needed) so offline builds stay green.
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "uuid", "limit", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
zxcvbn = "3"

# Internal crates (domain boundaries).
shared = { version = "0.1.0", path = "crates/shared" }
identity = { version = "0.1.0", path = "crates/identity" }
courses = { version = "0.1.0", path = "crates/courses" }
reviews = { version = "0.1.0", path = "crates/reviews" }
credit = { version = "0.1.0", path = "crates/credit" }
forum = { version = "0.1.0", path = "crates/forum" }
media = { version = "0.1.0", path = "crates/media" }
activity = { version = "0.1.0", path = "crates/activity" }
governance = { version = "0.1.0", path = "crates/governance" }
search = { version = "0.1.0", path = "crates/search" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
