[package]
name = "activity"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
identity.workspace = true
governance.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
uuid.workspace = true
