[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
sqlx.workspace = true
serde.workspace = true
chrono.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
ring.workspace = true
hex.workspace = true
base64.workspace = true
reqwest.workspace = true
sha2.workspace = true
regex.workspace = true
once_cell.workspace = true
uuid.workspace = true

shared.workspace = true
identity.workspace = true
courses.workspace = true
reviews.workspace = true
credit.workspace = true
forum.workspace = true
media.workspace = true
