[package]
name = "courses"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
pinyin.workspace = true
meilisearch-sdk.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
axum = { workspace = true, features = ["macros"] }
