[package]
name = "credit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
governance.workspace = true
sqlx.workspace = true
ring.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
thiserror.workspace = true

[dev-dependencies]
tower.workspace = true
tokio = { workspace = true, features = ["macros"] }
identity.workspace = true
forum.workspace = true
reviews.workspace = true
