[package]
name = "forum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
base64.workspace = true

[dev-dependencies]
tower.workspace = true
tokio = { workspace = true, features = ["macros"] }
sha2.workspace = true
hex.workspace = true
identity.workspace = true
