[package]
name = "forum"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
aho-corasick.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
base64.workspace = true
tracing.workspace = true
tokio.workspace = true
identity.workspace = true
media.workspace = true
activity.workspace = true
governance.workspace = true
platform.workspace = true
regex.workspace = true
meilisearch-sdk.workspace = true
once_cell.workspace = true
pulldown-cmark.workspace = true
futures.workspace = true
tokio-stream.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tower.workspace = true
