[package]
name = "identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
ring.workspace = true
base64.workspace = true
chrono.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
tracing.workspace = true
tokio.workspace = true
argon2.workspace = true
zxcvbn.workspace = true
hmac.workspace = true
meilisearch-sdk.workspace = true

credit.workspace = true
governance.workspace = true

[dev-dependencies]
tower.workspace = true
