[package]
name = "media"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
futures.workspace = true
hmac.workspace = true
sha1.workspace = true
openssl.workspace = true
percent-encoding.workspace = true
async-trait.workspace = true
identity.workspace = true
governance.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tower.workspace = true
