[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
governance.workspace = true
identity.workspace = true
jsonwebtoken.workspace = true
media.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
