[package]
name = "reviews"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
uuid.workspace = true

[dev-dependencies]
identity.workspace = true
tower.workspace = true
tokio = { workspace = true, features = ["macros"] }
