[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
tracing.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
