[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
tracing.workspace = true
sqlx.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
jsonwebtoken.workspace = true
lettre.workspace = true
hmac.workspace = true
ring.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
